syntax = "proto3";

package com.dylan.proto;

option java_package = "com.dylan.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true; //easy for managing

service StudentService {
    // request or response's parameter's type  must be message
    rpc getRealnameByUsername (MyRequest) returns (MyResponse) {
    }
    rpc getStudentsByAge (StudentRequest) returns (stream StudentResponse) {
    }

    rpc getStudentWrapperByAge (stream StudentRequest) returns (StudentResponseList) {
    }

    rpc BiTalk (stream StreamRequest) returns (stream StreamResponse) {
    }

}

message MyRequest {
    string username = 1; //"option string username=1;" can not add the key word "option"
}

message MyResponse {
    string realname = 2;
}

message StudentRequest {
    int32 age = 1;
}

message StudentResponse {
    string name = 1;
    int32 age = 2;
    string city = 3;
}

message StudentResponseList {
    repeated StudentResponse studentResponse = 1;
}


message StreamRequest {
    string request_info = 1;
}

message StreamResponse {
    string response_info = 1;
}